<resources>
    <string name="app_name">Stock Market Movers</string>
    <string name="market">Market:</string>
    <string name="search_symbol">Search Symbol</string>
    <string name="_yes">YES</string>
    <string name="_no">NO</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_6m">6M</string>
    <string name="_1y">1Y</string>
    <string name="_15_53">$15.53</string>
    <string name="today_s_volume">Today\'s Volume:</string>
    <string name="bid_12_49">Bid: $12.49</string>
    <string name="ask_12_50">Ask: $12.50</string>
    <string name="_52_week_range">52 Week Range</string>
    <string name="_10_10">$10.10</string>
    <string name="_12_50">$12.50</string>
    <string name="shortable">Shortable:</string>
    <string name="_110_0">110.0</string>
    <string name="advance_micro_devices">Advance Micro Devices</string>
    <string name="p_e_ratino">P/E Ratio:</string>
    <string name="marginable">Marginable:</string>
    <string name="yes">Yes</string>
    <string name="_24_000_000">24,000,000</string>
    <string name="_1_10_8_10">-1.10(8.10%)</string>
    <string name="amd">AMD</string>

    <string-array name="markets">
        <item>$SPX.X</item>
        <item>$COMPX</item>
        <item>$DJI</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="positions">Positions</string>
    <string name="net_liquidation_value">Net Liquidation Value</string>
    <string name="day">Day</string>

</resources>
