<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/chart_fragment_scene">


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candleChart"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/monthBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1m" />

        <Button
            android:id="@+id/threeMonthBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3m" />

        <Button
            android:id="@+id/sixMonthsBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6m" />


        <Button
            android:id="@+id/oneYearBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1y" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ProgressBar
        android:id="@+id/loadingBarDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/candleChart"
        android:layout_width="0dp"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.github.mikephil.charting.charts.CombinedChart>

    <TextView
        android:id="@+id/symbolView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advance_micro_devices"
        app:layout_constraintEnd_toEndOf="@+id/symbolView"
        app:layout_constraintStart_toStartOf="@+id/symbolView"
        app:layout_constraintTop_toBottomOf="@+id/symbolView" />

    <TextView
        android:id="@+id/lastTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_50"
        android:textColor="@color/focusTextColor"
        android:textSize="30sp"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="@+id/descriptionTv"
        app:layout_constraintStart_toStartOf="@+id/descriptionTv"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTv" />

    <TextView
        android:id="@+id/bidTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bid_12_49"
        app:layout_constraintBottom_toBottomOf="@+id/lastTv"
        app:layout_constraintEnd_toStartOf="@+id/lastTv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/askTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_12_50"
        app:layout_constraintBottom_toBottomOf="@+id/lastTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lastTv" />

    <TextView
        android:id="@+id/changeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="@+id/lastTv"
        app:layout_constraintStart_toStartOf="@+id/lastTv"
        app:layout_constraintTop_toBottomOf="@+id/lastTv" />

    <Button

        android:id="@+id/btnBuy"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorUp"
        android:text="Buy"
        app:layout_constraintEnd_toStartOf="@+id/btnDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeTv" />

    <Button
        android:id="@+id/btnSell"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorDown"
        android:text="Sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDivider"
        app:layout_constraintTop_toBottomOf="@+id/changeTv" />

    <View
        android:visibility="invisible"
        android:id="@+id/btnDivider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastTv" />


    <TextView
        android:id="@+id/expTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Expiration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderBtn" />

    <TextView
        android:id="@+id/posEffectTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Position Effect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candleChart" />

    <TextView
        android:id="@+id/orderTypeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Order Type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/effectBtn" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/effectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candleChart"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:defaultFocusHighlightEnabled="false"
            android:id="@+id/effectBuy"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buy" />

        <Button
            android:id="@+id/effectSell"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sell" />


        <Button
            android:id="@+id/effectSellShort"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sell Short" />

        <Button
            android:id="@+id/effectBuyToClose"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buy to Cover" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTypeTv"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/marketBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Market" />

        <Button
            android:id="@+id/limitBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Limit" />


        <Button
            android:id="@+id/stopMarket"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stp Market" />

        <Button
            android:id="@+id/stopLimit"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stop Limit" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/expirationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expTv"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/dayBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Day" />

        <Button
            android:id="@+id/gtcBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GTC" />


        <Button
            android:id="@+id/dayExtBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DAY+EXT" />

        <Button
            android:id="@+id/gtcExtBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GTC + EXT" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sharesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="Shares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expirationBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="Price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharesInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceInput" />



</androidx.constraintlayout.motion.widget.MotionLayout>